...
        self.buildUI()
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        self.navigationController?.navigationBar.accessibilityIdentifier = "wish_list_nav_bar"
        
        self.priceFormatter.allowsFloats = true
        self.priceFormatter.locale = Locale.current
        self.priceFormatter.numberStyle = .currency
        
        NotificationCenter.default.addObserver(forName: NSNotification.Name.sortOptionDidChange, object: nil, queue: OperationQueue.main) { (notification: Notification) in
...
        self.tableView.backgroundColor = UIColor.darkJungleGreen
        self.tableView.separatorStyle = .none
        self.view.backgroundColor = UIColor.darkJungleGreen
        
        self.navigationItem.leftBarButtonItem = UIBarButtonItem(image: UIImage(named: "Info")?.withRenderingMode(.alwaysTemplate), style: .plain, target: self, action: #selector(handleInfoButton(pressed:)))
        self.navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .search, target: self, action: #selector(handleSearchButton(pressed:)))
        self.navigationItem.rightBarButtonItem?.accessibilityIdentifier = "search_button"
    }
    
    @objc private func handleInfoButton(pressed: UIBarButtonItem) -> Void {
        let infoViewController = InfoTableViewController(style: .grouped)
        let navigationController = UINavigationController(rootViewController: infoViewController)
        navigationController.navigationBar.prefersLargeTitles = true
...
