...
                return view is UITextField
            }).first as? UITextField {
                textField.keyboardAppearance = .dark
                textField.tintColor = UIColor.white
                textField.backgroundColor = UIColor.dark
                textField.textColor = UIColor.white
                textField.accessibilityIdentifier = "search_textfield"
                textField.isAccessibilityElement = true
            }
        }
        
        self.navigationItem.titleView = self.searchController.searchBar
        self.definesPresentationContext = true
...
